# frigate-scanner

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  justfile  pyproject.toml
launchd/: com.frigate-scanner.daily.plist
scripts/: run-daily.sh
src/backend/: Dockerfile  README.md  check_open.py  run.py  scan.py
src/backend/frigate_scanner/: __init__.py  dashboard.py  probe.py  report.py  search.py  store.py
src/frontend/: README.md
tests/: test_dashboard.py  test_probe.py  test_report.py  test_run.py  test_search.py  test_store.py
